Feat: add many pages and images

--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shivam Engineers & Interior Designers - Construction & Design Experts</title>
-    <meta name="description" content="Professional construction and interior design services for residential and commercial projects. Expert engineers and designers delivering quality results on time." />
+    <title>
+      Shivam Engineers & Interior Designers - Construction & Design Experts
+    </title>
+    <meta
+      name="description"
+      content="Professional construction and interior design services for residential and commercial projects. Expert engineers and designers delivering quality results on time."
+    />
     <meta name="author" content="Shivam Engineers & Interior Designers" />
-    <meta name="keywords" content="construction, interior design, engineering, residential construction, commercial construction, renovation, remodeling, architectural planning" />
-    <link rel="canonical" href="https://lovable.dev/projects/66961103-5182-4894-94fb-40ca7083096e" />
+    <meta
+      name="keywords"
+      content="construction, interior design, engineering, residential construction, commercial construction, renovation, remodeling, architectural planning"
+    />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+    rel="stylesheet"
+  />
+  <!-- Add Material Symbols font -->
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+  />
 
-    <meta property="og:title" content="Shivam Engineers & Interior Designers - Construction & Design Experts" />
-    <meta property="og:description" content="Professional construction and interior design services for residential and commercial projects. Expert engineers and designers delivering quality results." />
+
+    <meta
+      property="og:title"
+      content="Shivam Engineers & Interior Designers - Construction & Design Experts"
+    />
+    <meta
+      property="og:description"
+      content="Professional construction and interior design services for residential and commercial projects. Expert engineers and designers delivering quality results."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Shivam Engineers & Interior Designers" />
-    <meta name="twitter:description" content="Professional construction and interior design services for residential and commercial projects." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  
   </head>
 
   <body>
